# document-intelligence-refinery

./: .dockerignore  .gitignore  DOMAIN_NOTES.md  Dockerfile  FINAL_REPORT.md  GUIDE.md  INTERIM_REPORT.md  README.md  TECHNICAL.md  docker-compose.yml  pyproject.toml
.refinery/: extraction_ledger.jsonl
.refinery/pageindex/: 1b9f5c2e8d4a7063.json  2a7d5f8c4e1b9043.json  3c7a1e5d9f2b8064.json  3f8a2c1d9e4b7051.json  4d8b2e5f9a1c7036.json  5a9c3f1e7d4b2081.json  5b2d7f9e1a4c8032.json  6f1e4a9d2c7b5018.json  7c4e1a8f2d9b3076.json  7e4c9a2f1b8d5072.json  8c3a6d1f4e9b2047.json  9e6c3b1f7a2d4085.json
.refinery/profiles/: a1_cbe_annual_2023_24.json  a2_annual_report_june_2023.json  a3_ethswitch_annual_2023_24.json  b1_dbe_audit_report_2023.json  b2_audited_financial_2022.json  b3_audited_financial_2021.json  c1_fta_performance_survey_2022.json  c2_pharmaceutical_manufacturing_2019.json  c3_security_vulnerability_standard.json  d1_tax_expenditure_2021_22.json  d2_consumer_price_index_aug_2025.json  d3_consumer_price_index_mar_2025.json
examples/: qa_examples.json
rubric/: extraction_rules.yaml
scripts/: gen_pageindex.py
src/agents/: audit.py  chunker.py  extractor.py  indexer.py  query_agent.py  triage.py
src/models/: __init__.py  document_profile.py  extracted_document.py  ldu.py  page_index.py  provenance.py
src/store/: __init__.py  fact_table.py  vector_store.py
src/strategies/: __init__.py  base.py  fast_text.py  layout.py  vision.py
tests/: test_chunker.py  test_extraction.py  test_triage.py
