[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "A production-grade, multi-stage agentic pipeline for enterprise document intelligence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core extraction
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    # Layout-aware extraction
    "docling>=2.5",
    # Data models
    "pydantic>=2.0",
    # Config
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # Token counting
    "tiktoken>=0.7",
    # HTTP client (OpenRouter VLM calls)
    "httpx>=0.27",
    # CLI output
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
final = [
    # Final submission additions
    "langgraph>=0.2",
    "chromadb>=0.5",
    "langchain-community>=0.2",
    "langchain-openai>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
